fixed css on mobile side and add php mailer to project

--- a/src/scss/blocks/_contact_form.scss
+++ b/src/scss/blocks/_contact_form.scss
@@ -129,9 +129,9 @@ position: relative;
       &__form {
         justify-content: center;
         margin-top: 25px;
-        max-width: 360px;
+        max-width: 345px;
         &-item {
-          min-width: 350px;
+          min-width: 345px;
           margin-bottom: 20px;
           margin-right: 0;
           margin-top: 14px;
@@ -144,7 +144,7 @@ position: relative;
           }
           & textarea {
             height: 130px;
-            width: 360px;
+            width: 345px;
           }
         }
         &-button {
