--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -101,7 +101,8 @@
       align-items: center;
       flex-direction: column;
       justify-content: center;
-      min-height: 650px;
+      min-height: 550px;
+
 
       &-title {
         margin-bottom: 100px;
