--- a/src/scss/blocks/_services.scss
+++ b/src/scss/blocks/_services.scss
@@ -83,7 +83,7 @@
     &__items {
       &__item {
         padding: 10px;
-        max-width: 350px;
+        max-width: 345px;
         &-icon {
           max-width: 80px;
           max-height: 80px;
