--- a/src/scss/blocks/_social_contact.scss
+++ b/src/scss/blocks/_social_contact.scss
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: end;
   bottom: 30px;
-  right: 90px;
+  right: 50px;
   justify-content: space-between;
   height: 180px;
 
@@ -17,11 +17,9 @@
 
       padding: 8px;
       border-radius: 15px;
-      border: 1px solid #fff;
-    
+      // border: 1px solid #fff;
     }
     &.telegram {
-  
       border-radius: 20px;
     }
     &.mail {
@@ -31,15 +29,28 @@
 
     &:hover {
       box-shadow: 0 0 20px var(--button-color);
-     
     }
   }
   @include tablet {
     bottom: 40px;
-    right: 35px;
+    right: 25px;
     height: 150px;
     &-icon {
-      width: 38px;
+      &.phone {
+        fill: #2fc72a;
+        width: 42px;
+        height: 38px;
+        padding: 3px;
+        border-radius: 15px;
+      }
+      &.telegram {
+        width: 42px;
+        height: 42px;
+      }
+      &.mail {
+        width: 42px;
+        height: 32px;
+      }
     }
   }
   @include mobile {
@@ -49,7 +60,22 @@
     height: 130px;
     width: 40px;
     &-icon {
-      width: 35px;
+      width: 38px;
+      &.phone {
+        fill: #2fc72a;
+
+        height: 38px;
+        padding: 3px;
+      }
+      &.telegram {
+        width: 38px;
+        height: 38px;
+        border-radius: 20px;
+      }
+      &.mail {
+        width: 36px;
+        height: 32px;
+      }
     }
   }
 }
